--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="overflow-x-hidden">
+<html lang="en" class="overflow-x-hidden duration-300">
 
 <head>
   <meta charset="UTF-8" />
